			- FloatCurve defaults to all 1s when lockedSensorVelocityBias is not specified and linear when specified.
			- Added lockedSensorMinAngularVelocity field which sets the minimum detectable angular velocity magnitude for angular velocity magnitude differencing.
- GameModes:
	- Don't spawn new asteroids in asteroid rain mode while in high time-warp.
- Competition:
	- Add a "defaults" button to the scoring window to reset score weights to their default values.
	- Updated parsing and plotting scripts.
		- Using 'python parse_tournament_log_files.py -w cfg' reads the score weights from the score_weights.cfg file.
		- Using 'python plot_summary.py -i regex' creates the plot ignoring any craft matching the regex string.
	- Add a "Daylight" position on the "TimeWarp Between Rounds" tournament slider to warp to dawn whenever a round would start in darkness.
- Spawning:
	- Automatically adjust the PRE range if the spawn distance would put craft outside the physics range.

v1.10.0.0
IMPROVEMENTS / FIXES
- General:
	- Fix colliders on the AWACS Radar when using legless variant.
	- Update the logic for syncing advanced 'Game Difficulty' settings to respect custom G-limit settings.
- UI:
	- Add an alternate layout to the entries in the vessel switcher, togglable via the ↔ button.
	- Adjust colour of vessel status and target strings in the vessel switcher for better visibility.
	- Update localisation synchronisation script and sync en-us to other languages. Missing entries are commented out and tagged with ??? and the English translation (to assist with user contributions).
	- Fix the wrongly labeled "ru-ru" localisation to "ru" so that it loads properly.
	- Add additional Chinese localisation thanks to user ZIYUXUAN201011.
	- Updated German localisation from EzBro.
	- Adjust waypoint ranking in the vessel switcher window to be based on the current score weights.
	- Fix m/km units in Team Icons to be used appropriately.